--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <!-- HOME PAGE -->
   <div id="home" class="page active">
     <div class="avatar-container">
-      <img src="jaat.jpg" >
+      <img src="Portfolio.jpg" >
     </div>
     <h1>👋 Welcome to My Portfolio</h1>
     <p>
